--- a/registerapp/package.json
+++ b/registerapp/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^17.0.2",
     "@angular/compiler": "^17.0.2",
     "@angular/core": "^17.0.2",
+    "@angular/fire": "^17.0.0",
     "@angular/forms": "^17.0.2",
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
@@ -27,6 +28,7 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@firebase/app": "^0.9.25",
     "@ionic/angular": "^7.0.0",
     "@ionic/lab": "^3.2.15",
     "ionicons": "^7.0.0",
